--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "React-Portfolio",
   "version": "0.1.0",
-  "homepage": "https://Sidiro23.github.io/React-Portfolio",
+  "homepage": "https://sidiro23.github.io/React-Portfolio/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
