--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React-Portfolio",
+  "name": "Portfolio",
   "version": "0.1.0",
   "homepage": "https://sidiro23.github.io/React-Portfolio/",
   "private": true,
